tests/tools/trip/randomTrips/errors/unknown_option/options.tools
-n net.net.xml --foo
